--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,6 @@
+2007-11-21 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.0.27a, SECURITY_PATCH=6, CVE-2007-4572
+
 2007-11-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 3.0.27. SECURITY_PATCH++
 
