--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,6 @@
+2007-12-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.0.28, SECURITY_PATCH=7, CVE-2007-6015
+
 2007-11-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.0.27a, SECURITY_PATCH=6, CVE-2007-4572
 
