--- a/gnome2-libs/pango/HISTORY
+++ b/gnome2-libs/pango/HISTORY
@@ -1,3 +1,6 @@
+2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.18.4
+
 2007-10-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.18.3
 
