xine-lib 1.1.9.1, SECURITY_PATCH=3, CVE-2008-0225

--- a/video-libs/xine-lib/HISTORY
+++ b/video-libs/xine-lib/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.1.9.1, SECURITY_PATCH=3, CVE-2008-0225
+
 2008-01-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1.9
 
