--- a/ruby-raa/ruby-gnomeprintui/HISTORY
+++ b/ruby-raa/ruby-gnomeprintui/HISTORY
@@ -1,3 +1,6 @@
+2008-01-12 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* BUILD: use default_build
+
 2007-03-18 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.16.0
 
