--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,7 @@
+2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: fixed libxscrnsaver unknown flag -- fixed the bug:
+	  `Unknown parameter: --disable-xss' during config stage
+
 2008-01-14 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: added optional depends on libxscrnsaver when using
 	  xorg-modular to stop the screensaver from popping up during playback
@@ -493,4 +497,3 @@
 2002-04-23 Eric Schabell <eric@schabell.com>
 	* HISTORY: Added this History file
 	* DETAILS: version 0.90.pre1.
-
