--- a/http/elinks/HISTORY
+++ b/http/elinks/HISTORY
@@ -1,3 +1,6 @@
+2008-02-05 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.11.4rc0, SECURITY_PATCH=2, CVE-2007-2027
+
 2007-04-23 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* CONFIGURE: removed guile version warning
 
