clamav: Increment SECURITY_PATCH for security fix 0.92.1

--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2008-02-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Increment SECURITY_PATCH=6 for 0.92.1
+
 2008-02-12 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.92.1
 
