--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,6 +1,6 @@
-2008-02-26 Ladislav Hagara <hgr@vabo.cz>
-	* latest.defaults: updated latest to patch-2.6.24.3
-	* info/patches/maintenance_patches/patch-2.6.24.3: added
+2008-02-26 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/maintenance_patches/patch-2.6.22.19: Added
+	  Security fix for CVE-2007-3731 and CVE-2007-3731
 
 2008-02-11 Vlad Glagolev <stealth@sourcemage.org>
 	* latest.defaults: updated to 2.6.24.2
