--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -2,13 +2,13 @@
 	* info/patches/mm_patches/2.6.25-rc2-mm1: Added
 	* info/patches/PRE_2_6/patch-2.6.25-rc2: Added (for 2.6.25-rc2-mm1)
 	* latest.defaults: Latest mm_patch is 2.6.25-rc2-mm1
+	  Latest maintenance_patch is 2.6.24.3
+	  Latest PRE_2_6 is 2.6.25-rc3
 	* info/patches/maintenance_patches/patch-2.6.24.3: Added
-	* latest.defaults: Latest maintenance_patch is 2.6.24.3
 	* info/patches/PRE_2_6/patch-2.6.25-rc3: Added
-	* latest.defaults: Latest PRE_2_6 is 2.6.25-rc3
 	* info/patches/maintenance_patches/patch-2.6.23.17: Added
 	* info/patches/maintenance_patches/patch-2.6.22.19: Added
-	  Security fix for CVE-2007-3731 and CVE-2007-3731
+	  Security fix for CVE-2007-3731
 
 2008-02-11 Vlad Glagolev <stealth@sourcemage.org>
 	* latest.defaults: updated to 2.6.24.2
