dbus 1.0.3, SECURITY_PATCH=2, CVE-2008-0595 (cherry picked from commit 7ccf73767036c9fe820b1ec2cd4e2ced85c9c3bd)

--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.0.3, SECURITY_PATCH=2, CVE-2008-0595
+
 2007-06-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: fixed WEB_SITE
 
