video/mplayer: added four security patches

--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,8 @@
+2008-03-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD, demux_audio_fix_20080129.diff,
+	  demux_mov_fix_20080129.diff, stream_cddb_fix_20080120.diff,
+	  url_fix_20080120.diff: added four security patches
+
 2008-02-25 Vlad Glagolev <stealth@sourcemage.org>
 	* INSTALL: added png icon
 
