subversion-1.8.1 - SECURITY fix

--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,7 @@
+2013-08-06Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.1
+	  SECURITY_PATCH++ fix CVE-2013-4131 
+
 2013-07-06 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFIGURE, BUILD: remove obsolete options
 	  add support for 'git svn commands'
