--- a/net/chrony/HISTORY
+++ b/net/chrony/HISTORY
@@ -1,3 +1,8 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.29
+	  SECURITY_PATCH++ 
+	  fix CVE-2012-4502 and CVE-2012-4503
+
 2013-07-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.28
 
