--- a/python-pypi/pyopenssl/HISTORY
+++ b/python-pypi/pyopenssl/HISTORY
@@ -1,3 +1,7 @@
+2013-09-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.13.1
+	  SECURITY_PATCH=1, fixes CVE-2013-4314
+
 2011-09-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.13
 
