--- a/crypto/gnupg/HISTORY
+++ b/crypto/gnupg/HISTORY
@@ -1,3 +1,6 @@
+2013-10-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.15, SECURITY_PATCH=9, CVE-2013-4402
+
 2013-08-16 Remko van der Vossen <wich@sourcemage.org>
 	* BUILD: replace -O3 with -O2, gnupg doesn't play nice with -O3
 
