--- a/crypto/gnupg-exp/HISTORY
+++ b/crypto/gnupg-exp/HISTORY
@@ -1,3 +1,6 @@
+2013-10-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.22, SECURITY_PATCH=7, CVE-2013-4402
+
 2013-08-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.21
 
