--- a/gnome2-libs/pango/HISTORY
+++ b/gnome2-libs/pango/HISTORY
@@ -1,3 +1,6 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.36.0
+
 2013-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Added GI subdependency
 
