librsvg2-1.39.0 - SECURITY FIX

--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,7 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.39.0
+	  SECURITY_PATCH=2, fixes CVE-2013-1881
+	
 2013-02-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: gtk+2, gtk+3 are optional
 
