--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,7 @@
+2013-10-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.5
+	 SECURITY_PATCH++ fixes CVE-2013-4466
+
 2013-09-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.4
 
