--- a/qt5/qtbase/HISTORY
+++ b/qt5/qtbase/HISTORY
@@ -1,3 +1,7 @@
+2013-12-05  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.2.0
+	  SECURITY_PATCH=1 - fixes CVE-2013-4549
+
 2013-11-25  Treeve Jelbert <treeve@sourcemage.org>
 	* qtbase: update patch
 
