samba 3.6.22, SECURITY_PATCH=21, CVE-2013-4408 and CVE-2012-6150 (cherry picked from commit 85b119a5d1c3be53fe83dd4781866bcfcfaca658)

--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,6 @@
+2013-12-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.6.22, SECURITY_PATCH=21, CVE-2013-4408 and CVE-2012-6150
+
 2013-08-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.6.18, SECURITY_PATCH=20, CVE-2013-4124
 
