--- a/collab/subversion/HISTORY
+++ b/collab/subversion/HISTORY
@@ -1,3 +1,7 @@
+2014-02-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.5
+	  SECURITY_PATCH++ fix CVE-2013-4505 CVE-2013-4558
+
 2013-11-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.4
 	  SECURITY_PATCH++ fix CVE-2013-4246 CVE-2013-4262 CVE-2013-4246
