libxfont-1.4.7 - SECURITY fix

--- a/xorg-lib/libxfont/HISTORY
+++ b/xorg-lib/libxfont/HISTORY
@@ -1,3 +1,7 @@
+2014-01-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.7
+	  SECURITY_PATCH ++, CVE-2013-6462
+
 2013-07-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.6
 
