--- a/python-pypi/jinja2/HISTORY
+++ b/python-pypi/jinja2/HISTORY
@@ -1,3 +1,7 @@
+2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.7.2
+	  SECURITY_LEVEL=1
+
 2013-07-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.7
 
