--- a/python-pypi/jinja2/HISTORY
+++ b/python-pypi/jinja2/HISTORY
@@ -1,6 +1,6 @@
 2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.7.2
-	  SECURITY_LEVEL=1
+	  SECURITY_PATCH=1
 
 2013-07-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.7
