--- a/net/chrony/HISTORY
+++ b/net/chrony/HISTORY
@@ -1,3 +1,8 @@
+2014-01-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.29.1
+	  SECURITY_PATCH++ 
+	  fixes CVE-2014-0021
+
 2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.29
 	  SECURITY_PATCH++ 
