--- a/audio-creation/seq24/HISTORY
+++ b/audio-creation/seq24/HISTORY
@@ -1,3 +1,8 @@
+2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.9.2; renewed source url, source extension;
+	  quoting paths
+	* DEPENDS: added missing required dependency; fixed JACK configure flags
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
