--- a/crypto/libgcrypt/HISTORY
+++ b/crypto/libgcrypt/HISTORY
@@ -1,3 +1,8 @@
+2014-02-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.1
+	  SECURITY_PATCH++ fixes CVE-2013-4242
+	* UP_TRIGGERS: added
+
 2013-07-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.3, SECURITY_PATCH=1
 
