--- a/devel/python3/HISTORY
+++ b/devel/python3/HISTORY
@@ -1,3 +1,7 @@
+2014-02-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.3.4
+	  SECURITY_PATCH++, fixes CVE-2013-1752
+
 2013-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.3.3
 
