crypto/gnutls: versions 3.2.12 and 3.1.22, fixes CVE-2014-0092 and CVE-2014-1959

--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,7 @@
+2014-03-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.2.12 and 3.1.22, this fixes CVE-2014-1959
+	  and CVE-2014-0092
+
 2014-01-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.9
 
