--- a/disk/udisks2/HISTORY
+++ b/disk/udisks2/HISTORY
@@ -1,3 +1,7 @@
+2014-03-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.1.3
+	  SECURITY_PATCH++, fix CVE-2014-0004
+
 2014-01-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.2
 
