crypto/openssl: version 1.0.1g, fixes CVE-2014-0160

--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,7 @@
+2014-04-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.0.1g, SECURITY_PATCH=22, CVE-2014-0160
+	* openssl.gpg: import key FA40E9E2
+
 2014-01-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.0l, SECURITY_PATCH=21
 
