--- a/libs/json-c/HISTORY
+++ b/libs/json-c/HISTORY
@@ -1,3 +1,9 @@
+2014-04-18 Treeve Jelbert <treeve@souremage.org>
+	* DETAILS: version 0.12
+	  SECURITY_PATCH=1
+	  fixes CVE-2013-6371 & CVE-2013-637
+	* BUILD: added, to suppress errors
+
 2013-10-17 Treeve Jelbert <treeve@souremage.org>
 	* DETAILS: version 0.11
 	  new SOURCE_URL & WEB_SITE
