--- a/gnome2-libs/pango/HISTORY
+++ b/gnome2-libs/pango/HISTORY
@@ -1,3 +1,6 @@
+2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.36.3
+
 2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.36.2
 
