--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,7 @@
+2014-06-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: versions 3.1.25 and 3.2.15, SECURITY_PATCH++, fixes
+	  CVE-2014-3466
+
 2014-05-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix SOURCE_DIRECTORY
 
