kernels/linux: version 3.14.6, fixes CVE-2014-3153

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2014-06-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.14.6: added
+	* latest_defaults: version 3.14.6
+	* DETAILS: SECURITY_PATH++, fixes CVE-2014-3153
+
 2014-06-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.14.5: added
 	* latest_defaults: version 3.14.5
