--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,7 @@
+2014-06-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.4
+	  SECURITY++, fixes CVE-2014-3477
+
 2014-05-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.2
 
