--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,6 @@
+2014-06-23 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.6.24, SECURITY_PATCH=23, CVE-2014-0244 and CVE-2014-3493
+
 2014-04-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.6.23; SECURITY_PATCH++ (CVE-2013-4496)
 	* DEPENDS: depends pkgconfig
