openjpeg-1.5.2 - SECURITY fix+++

--- a/graphics-libs/openjpeg/HISTORY
+++ b/graphics-libs/openjpeg/HISTORY
@@ -1,3 +1,10 @@
+2014-06-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.2
+	  SECURITY_PATCH++
+	  fixes  CVE-2013-4289 CVE-2013-4290
+	  CVE-2013-1447 CVE-2013-6045 CVE-2013-6052 CVE-2013-6054 CVE-2013-6053 CVE-2013-6887
+	  new url - sourceforge
+
 2013-04-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: extra depends libpng, tiff, lcms2, zlib
 
