--- a/archive-libs/lzo/HISTORY
+++ b/archive-libs/lzo/HISTORY
@@ -1,3 +1,6 @@
+2014-06-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.07, SECURITY_PATCH++, fixes CVE-2014-4607
+
 2012-07-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* BUILD: added, to build shared library
