--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2014-06-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.2.4, SECURITY_PATCH++, fixes CVE-2014-4610
+
 2014-06-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.2.3
 
