policykit 0.112 SECURITY FIX

--- a/gnome2-libs/policykit/HISTORY
+++ b/gnome2-libs/policykit/HISTORY
@@ -1,3 +1,7 @@
+2014-07-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.112
+	  SECURITY_PATCH=1,  fixes CVE-2013-4288
+
 2013-08-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* DEPENDS: Depends on shadow for usermod
