--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,7 @@
+2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.4
+	  SECURITY_PATCH++, fix CVE-2014-353
+	
 2014-05-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.3
 	* DEPEDNS: add mdnsresponder
