--- a/gnome2-libs/pango/HISTORY
+++ b/gnome2-libs/pango/HISTORY
@@ -1,3 +1,6 @@
+2014-08-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.36.6
+
 2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.36.5
 
