--- a/crypto/gpgme/HISTORY
+++ b/crypto/gpgme/HISTORY
@@ -1,3 +1,8 @@
+2014-08-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.1
+          SECURITY_PATCH++,, fixs CVE-2014-3564
+	* DEPENDS: fix libassuan dependency
+
 2014-06-03 Treeve Jelbert <treeve@sourcemage.org>
 	* PREPARE: add 1.5 branch
 	*DETAILS: version 1.5.0
