--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,7 @@
+2014-08-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.5
+	  SECURITY_PATCH++, fix CVE-2014-5029/5030/5031
+
 2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS, CONFIGURE: improve SSL/gnutls choice - remive obsolete flags
 
