--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,7 @@
+2014-09-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.8
+	  SECURITY++, fixes CVE-2014-3635, CVE-2014-3636, CVE-2014-3637, CVE-2014-3638, CVE-2014-3639
+
 2014-07-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.6, SECURITY_PATCH=11
 
