--- a/gnome2-libs/pango/HISTORY
+++ b/gnome2-libs/pango/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: MESALIB
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing dependencies
 
