--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,7 @@
+2014-10-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: versions 1.0.1j and 0.9.8zc, SECURITY_PATCH++, fixes
+	  for CVE-2014-3513, CVE-2014-3567, CVE-2014-3568
+
 2014-10-08 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTSL fix permissions
 
