crypto/openssl: versions 0.9.8zc and 1.0.1j, fixes CVE-2014-3513, CVE-2014-3567, CVE-2014-3568 (cherry picked from commit 6008ba006698e290bed753e2a7a946e724d0364f)
Conflicts:

	crypto/openssl/HISTORY

--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,7 @@
+2014-10-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: versions 1.0.1j and 0.9.8zc, SECURITY_PATCH++, fixes
+	  for CVE-2014-3513, CVE-2014-3567, CVE-2014-3568
+
 2014-08-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.1i (branch 1.0), 0.9.8zb (branch 0.9);
 	  SECURITY_PATCH++ (9 CVEs)
