dbus-1.8.10 SECURITY FIX

--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,7 @@
+2014-11-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.10
+	  SECURITY++, fixes CVE-2014-363 CVE-2014-7824
+
 2014-09-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.8
 	  SECURITY++, fixes CVE-2014-3635, CVE-2014-3636, CVE-2014-3637, CVE-2014-3638, CVE-2014-3639
