curl-7.39.0 SECURITY FIX

--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,5 +1,6 @@
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: gmp
+	  SECURITY_PATCH++ multiple fixes since 7.34.0
 
 2014-08-23 Treeve Jelbert <treeve@sourcemage.org>
         * CONFIGURE, DEPENDS, BUILD: also support libressl, cleanup
