--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,7 @@
+2014-11-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.20 / 3.1.28
+	  SECURITY_PATCH++  fixes CVE-2014-8564
+
 2014-11-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.19
 
