--- a/libs/pcre/HISTORY
+++ b/libs/pcre/HISTORY
@@ -1,5 +1,7 @@
 2014-11-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 8.36
+	  SECURITY_PATCH++, upstream patch
+	* PRE_BUILD, cve-2014-8964: added
 
 2014-04-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 8.35
