--- a/ruby-raa/ruby-2.1/HISTORY
+++ b/ruby-raa/ruby-2.1/HISTORY
@@ -1,3 +1,7 @@
+2014-11-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.1.5
+	  SECURITY_PATCH=1 fix CVE-2014-8090
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
