--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,7 @@
+2014-11-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.15
+	  SECURITY_PATCH++
+
 2014-08-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.13
 
