--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,7 @@
+2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.1;1
+	  SECURITY_PATCH++
+
 2014-11-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.2.0
 
