--- a/crypto/krb5/HISTORY
+++ b/crypto/krb5/HISTORY
@@ -1,3 +1,7 @@
+2015-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.13
+	  SECURITY_PATCH++, fixes CVE-2014-5354
+
 2014-08-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.12.2
 	  SECURITY_PATCH++
