--- a/gnome2-libs/pangomm/HISTORY
+++ b/gnome2-libs/pangomm/HISTORY
@@ -1,3 +1,6 @@
+2015-01-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.34.0
+
 2011-10-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.28.4
 
