nginx: Update stable to 1.6.2 and devel to 1.7.9
Also:
* Use prepare_select_branch.
* Remove "legacy" and "old" branches due to security issues with older
  releases.
* Remove obsolete patches.

--- a/http/nginx/HISTORY
+++ b/http/nginx/HISTORY
@@ -1,3 +1,12 @@
+2015-01-17 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS, PREPARE: Use prepare_select_branch
+	  Remove "old" and legacy "branches" due to security issues
+	* DETAILS: Update stable branch to 1.6.2
+	* DETAILS: Update devel branch to 1.7.9
+	* PRE_BUILD: Removed obsolete patches
+	* space.patch: Removed, not needed anymore
+	* syslog-0.7.patch: Removed, not needed anymore
+
 2014-12-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* INSTALL: install nginx.conf
