patch 2.7.3, SECURITY_PATCH=2, CVE-2015-1196

--- a/devel/patch/HISTORY
+++ b/devel/patch/HISTORY
@@ -1,3 +1,6 @@
+2015-01-27 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.7.3, SECURITY_PATCH=2, CVE-2015-1196
+
 2013-02-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added attr optional dependency
 
