glibc: critical security update (CVE-2015-0235)

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,10 @@
+2015-01-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++ (CVE-2015-0235)
+	* PRE_BUILD: apply patches
+	* ghost.patch, ghost-236.patch: added, to fix GHOST vulnerability
+	  (transformed from official patch)
+	* glibc-2.3-20050725.tar.bz2.sig: removed, obsolete signature
+
 2014-11-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* BUILD: allow drop of strip option if a user desires so
