xorg-server-1.17.1 SECURITY fix

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,7 @@
+2015-02-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.17.1
+	  SECURITY_PATCH=9 fix CVE-2015-0255
+
 2015-02-05 Pavel Vinogradov <vin.public@gmail.com>
 	* DEPENDS: added xcb-util-renderutil
 
